# Home-Assistant-Alarm-Sync

./: README.md  hacs.json  pyproject.toml
custom_components/ha_alarm_sync/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/ha_alarm_sync/translations/: en.json
custom_components/ios_alarm_sync/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/ios_alarm_sync/translations/: en.json
docs/: ios-shortcut-guide.md
docs/superpowers/plans/: 2026-04-05-ios-alarm-sync.md
docs/superpowers/specs/: 2026-04-05-ios-alarm-sync-design.md
scripts/: generate_shortcut.py
shortcuts/: sync_alarms_to_ha.shortcut
tests/: conftest.py  test_config_flow.py  test_init.py  test_sensor.py
